--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "work",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
+ "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
